Add link to script

--- a/trolskgen.html
+++ b/trolskgen.html
@@ -101,5 +101,10 @@ print(trolskgen.to_source(source_template))
 </code></pre>
 <p>Neat huh?</p>
 
+<hr>
+
+To immedi-run the above, download <a href="https://raw.githubusercontent.com/leontrolski/leontrolski.github.io/refs/heads/master/code/trolskgen_example.py">code</a> then:
+<pre><code class="lang-python">uv run </code>trolskgen_example.py</pre>
+
     </body>
 </html>
