--- a/sane-config.html
+++ b/sane-config.html
@@ -32,6 +32,8 @@
         </a>
         <p><em>Part of a series - <a href="index.html#stop">Stop doing things</a></em></p>
         <br>
+        <p><em>Note from 2025 me - these days I would follow a similar approach, but using Pydantic.</em></p>
+        <br>
         <p><i>2020-12-17</i></p>
         <h1>
             Stop doing mad config
