--- a/mostly-pointless.html
+++ b/mostly-pointless.html
@@ -33,6 +33,7 @@
         <p><em>Part of a series - <a href="index.html#stop">Stop doing things</a></em></p>
         <br>
         <p><i>2021-01-27</i></p>
+        <p><em>Note from 2025 me - I largely still agree with myself - and I still see the same crappy OO code getting pumped out. The final point in "Exceptions" is worth emphasising more.</em></p>
         <h1>
             OO in Python is mostly pointless
         </h1>
