--- a/git-rebase-diff.html
+++ b/git-rebase-diff.html
@@ -51,6 +51,8 @@
         </p>
         <pre class="language-bash"><code>BRANCH=my-special-branch; git diff origin/$BRANCH $BRANCH -- $(git diff master $BRANCH --name-only)</code>
 </pre>
+<hr>
+<p>See also: <a href="https://til.codeinthehole.com/posts/about-gits-rangediff-command/">git range-diff</a></p>
 
     </body>
 
