Wrapping raw SQL

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ TODO
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
             <li>Postgres <a href="pglockpy.html">locks explorer</a></li>
             <li><a href="unorder.html">Weeding</a> out flakey database tests</li>
+            <li>Making raw SQL <a href="django-orm-wrapper.html">composable</a> in Django</li>
         </ul>
     </p>
     <br>
