--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ TODO
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
             <li><a href="grammar.html">Changing and compiling</a> the cpython interpreter</li>
             <li>Using Python 3.14 template strings <a href="trolskgen.html">to write Python</a></li>
+            <li><a href="python-script.html">Cheeky</a> Python shell script</li>
         </ul>
     </p>
     <br>
