--- a/recipes.html
+++ b/recipes.html
@@ -36,6 +36,7 @@
             <tr><td><a href="#03">Mexican Lentils</a></td><td><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></td></tr>
             <tr><td><a href="#04">Pasta e Fagiolli</a></td></tr>
             <tr><td><a href="#05">Cashew Curry</a></td><td><img class="thumb" src="images/recipes/05-cashew-thumb.webp"></td></tr>
+            <tr><td><a href="#06">Cauliflower Enchiladas</a></td></tr>
         </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
@@ -43,6 +44,7 @@
         <p id="03"><img class="recipe" src="images/recipes/03-lentils.webp"></p><hr>
         <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"></p><hr>
         <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"></p><hr>
+        <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
