--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ TODO
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
             <li>My <a href="thermostat.html">dream thermostat</a></li>
             <li>Bayes <a href="bayes.html">derivation</a></li>
+            <li>Games for <a href="games.html">babies</a></li>
             <li><a href="recipes.html">Recipes</a> for laid-back engineers</li>
         </ul>
     </p>
