--- a/games.html
+++ b/games.html
@@ -41,6 +41,16 @@
             <br>- you touch the screen and the water ripples
             <br>- maybe some fish if you're feeling ambitious, they move out the way when you touch near them else they gently swim
         </blockquote>
+        <a href="games/drip.html">Drip</a>
+        <blockquote>
+            single page html game for babies on my phone
+            <br>- full screen, zooming turned off
+            <br>- include a button to add to home screen
+            <br>- starts with a solid statich color, swiping around changes the color of the screen in some trippy way, on releasing, the smooshed color is static
+            <br>i wanted more of like a blended muticolr smoosh blend thing. also the default brush size is massive
+            <br>that's cool, nearly there, can you make the brush like thing more multicorored and add some oil-drop like effects
+            <br>nearly there, but the brush is still too big and too white, the size should randomly change more
+        </blockquote>
 
     </body>
 
