--- a/recipes.html
+++ b/recipes.html
@@ -37,6 +37,8 @@
             <tr><td><a href="#04">Pasta e Fagiolli</a></td></tr>
             <tr><td><a href="#05">Cashew Curry</a></td><td><img class="thumb" src="images/recipes/05-cashew-thumb.webp"></td></tr>
             <tr><td><a href="#06">Cauliflower Enchiladas</a></td></tr>
+            <tr><td><a href="#07">Pack Choi Pad Thai</a></td><td><img class="thumb" src="images/recipes/07-pad-thai-thumb.webp"></td></tr>
+            <tr><td><a href="#08">Spinach Cannelloni</a></td><td><img class="thumb" src="images/recipes/08-cannelloni-thumb.webp"></td></tr>
         </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
@@ -45,6 +47,8 @@
         <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"></p><hr>
         <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"></p><hr>
         <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"></p><hr>
+        <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"></p><hr>
+        <p id="08"><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
@@ -54,6 +58,8 @@
                     <li><code>tGVC</code> = <a href="https://www.amazon.co.uk/Greek-Vegetarian-Cookbook-Heather-Thomas/dp/0714879134">the Greek Vegetarian Cookbook</a></li>
                     <li><code>tMVC</code> = <a href="https://www.amazon.co.uk/Mexican-Vegetarian-Cookbook-authentic-everyday/dp/1838665269">the Mexican Vegetarian Cookbook</a></li>
                     <li><code>LFV</code> = <a href="https://www.amazon.co.uk/Leon-Fast-Vegetarian-Henry-Dimbleby/dp/1840916109">Leon: Fast Vegetarian</a></li>
+                    <li><code>VLi15</code> = <a href="https://www.amazon.co.uk/Veggie-Lean-15-15-minute-Workouts/dp/1509856153">Joe Wicks: Veggie Lean in 15</a></li>
+                    <li><code>JO</code> = <a href="https://www.jamieoliver.com/recipes/all/">Jamie Oliver</a></li>
                 </ul>
             </li>
             <li>Ingredients are vaguely grouped by aisle.</li>
