--- a/recipes.html
+++ b/recipes.html
@@ -39,6 +39,7 @@
             <tr><td><a href="#06">Cauliflower Enchiladas</a></td></tr>
             <tr><td><a href="#07">Pack Choi Pad Thai</a></td><td><img class="thumb" src="images/recipes/07-pad-thai-thumb.webp"></td></tr>
             <tr><td><a href="#08">Spinach Cannelloni</a></td><td><img class="thumb" src="images/recipes/08-cannelloni-thumb.webp"></td></tr>
+            <tr><td><a href="#09">Dumpling Stew</a></td><td><img class="thumb" src="images/recipes/09-dumpling-stew-thumb.webp"></td></tr>
         </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
@@ -49,6 +50,7 @@
         <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"></p><hr>
         <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"></p><hr>
         <p id="08"><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
+        <p id="09"><img class="recipe" src="images/recipes/09-dumpling-stew.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
@@ -60,6 +62,7 @@
                     <li><code>LFV</code> = <a href="https://www.amazon.co.uk/Leon-Fast-Vegetarian-Henry-Dimbleby/dp/1840916109">Leon: Fast Vegetarian</a></li>
                     <li><code>VLi15</code> = <a href="https://www.amazon.co.uk/Veggie-Lean-15-15-minute-Workouts/dp/1509856153">Joe Wicks: Veggie Lean in 15</a></li>
                     <li><code>JO</code> = <a href="https://www.jamieoliver.com/recipes/all/">Jamie Oliver</a></li>
+                    <li><code>LHOPV</code> = <a href="https://www.amazon.co.uk/Happy-Leons-Leon-One-pot-Vegetarian/dp/1840918039">Leon Happy One Pot Vegetarian</a></li>
                 </ul>
             </li>
             <li>Ingredients are vaguely grouped by aisle.</li>
