--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ TODO
             <li>My <a href="thermostat.html">dream thermostat</a></li>
             <li>Bayes <a href="bayes.html">derivation</a></li>
             <li>Games for <a href="games.html">babies</a></li>
+            <li>Running <a href="buggy.html">buggy</a></li>
             <li><a href="recipes.html">Recipes</a> for laid-back engineers</li>
         </ul>
     </p>
