Add cashew paneer

--- a/recipes.html
+++ b/recipes.html
@@ -40,6 +40,7 @@
             <tr><td><a href="#07">Pack Choi Pad Thai</a></td><td><img class="thumb" src="images/recipes/07-pad-thai-thumb.webp"></td></tr>
             <tr><td><a href="#08">Spinach Cannelloni</a></td><td><img class="thumb" src="images/recipes/08-cannelloni-thumb.webp"></td></tr>
             <tr><td><a href="#09">Dumpling Stew</a></td><td><img class="thumb" src="images/recipes/09-dumpling-stew-thumb.webp"></td></tr>
+            <tr><td><a href="#10">Cashew Paneer Curry</a></td><td><img class="thumb" src="images/recipes/10-cashew-paneer-thumb.webp"></td></tr>
         </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
@@ -51,6 +52,7 @@
         <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"></p><hr>
         <p id="08"><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
         <p id="09"><img class="recipe" src="images/recipes/09-dumpling-stew.webp"></p><hr>
+        <p id="10"><img class="recipe" src="images/recipes/10-cashew-paneer.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
