--- a/buggy.html
+++ b/buggy.html
@@ -64,7 +64,8 @@
 <p><img src="images/buggy/fabric.webp" alt="Fabric"></p>
 <p>The final version is made from &quot;12oz Heavy Duty Denier Fabric Cordura Canvas Fabric with PVC Backing for Sewing&quot; and seems more than strong enough. It is supported by some plastic at the back - I ended up using some approx 3mm plastic sawed out of a large IKEA storage box.</p>
 <h2 id="donor-pram">Donor pram</h2>
-<p>The 5 point harness and fabric baby actually sits in are taken from a £20 donor buggy from the 90s. This included a zip-on winter sleeping bag bit that has been very useful, along with a sun shade bit that I&#39;ve yet to work out.</p>
+<p>The 5 point harness and fabric baby actually sits in are taken from a £20 donor buggy from the 90s. This included a zip-on winter sleeping bag bit that has been very useful, along with a canopy (this fitted on surprisingly easily) that has had some use in the rain:</p>
+<p><img src="images/buggy/canopy.webp" alt="Canopy"></p>
 <h2 id="folding">Folding</h2>
 <p>Undoing two bolts allows the whole thing to fold flat:</p>
 <p><img src="images/buggy/folding.webp" alt="Folding"></p>
@@ -76,7 +77,7 @@
 <p>The wheels are AliExpress Brompton rims laced to MTB thru-axle hubs - I had to sand the tubes a bit to get them to slide on.</p>
 <h2 id="lessons">Lessons Learned</h2>
 <ul>
-<li>Ultimately, I didn&#39;t trust the M4 threaded insert clamping mechanism for any of the serious joints, so I epoxied the tubes to the joints. In the future, I&#39;d probably go straight to glue, although it&#39;s a bit stressful getting the distances/angles correct in one attempt. For anything where you still need adjustability, I&#39;d go M5+ threaded inserts.</li>
+<li>Ultimately, I didn&#39;t trust the M4 threaded insert clamping mechanism for any of the serious joints, so I epoxied the tubes to the joints. In the future, I&#39;d probably go straight to glue, although it&#39;s a bit stressful getting the distances/angles correct in one attempt. For anything where you still need adjustability, I&#39;d go M5+ threaded inserts. On the front wheel, where the forces are high, the glue came loose (see below) - it would be worth researching different glues/approaches.</li>
 <li>Get some test joints printed to match your tubes before printing everything.</li>
 <li>I never fold it as it as it&#39;s a bit of a faff. There&#39;s definitely a nicer folding mechanism out there whilst keeping the design simple and light.</li>
 <li>The original carbon plate was 2mm - the forks would flex loads around the axis marked below, with the plate twisting in the parallel axis:
@@ -87,8 +88,14 @@
 <li>Some of the new home 3D printers are cheap, compact and get good reviews, <em>maybe</em> PLA would be strong enough?</li>
 <li>The geometry seems good while running. The centre of mass could maybe be a tad further back to make steering easier at the expense of stability. Currently back-wheel-to-back-wheel is around 50cm and the seat is much lower than on a Thule to make up for the narrowness. I think you could go narrower still if you lowered the seat even more - I can&#39;t see much good reason for it to be high - narrow is good for city running.</li>
 <li>On the first run, it would steer slightly to the left. I loosened a couple of bolts and moved one fork like 2mm - this fixed it - being able to adjust the front wheel angle is pretty useful.</li>
-<li>It is possible adjust how tightly the wheels are attached, but there&#39;s still some play. Something more similar to a modern bicycle thru axle would be better, but tricky to manufacture at home.</li>
-<li>Some kevlar cord keeps the back rectangle shape from flexing too much. I think you could probably make this bit a triangle too and avoid this ugliness.</li>
+<li>It is possible adjust how tightly the wheels are attached, but there&#39;s still some play. Something more similar to a modern bicycle thru axle would be better, but tricky to manufacture at home.
+    <p>After the first design came a bit loose, I added a quick release I had lying around - much stronger!</p>
+    <p><img src="images/buggy/qr.webp" alt="Quick release"></p>
+    <p>In the future, I would design it something like this:</p>
+    <p><img src="images/buggy/qr-diagram.webp" alt="Quick release diagram"></p>
+</li>
+<li>Some kevlar cord keeps the back rectangle shape from flexing too much. I think you could probably make this bit a triangle too and avoid this ugliness. If not, the cord could at least attach more neatly.</li>
+<li>The Brompton sized rims limit you to narrow tyres - maybe going 18 or even 20 inch would fix this. There is also a different 16 inch rim size designed for kids' bikes that that may have more options.</li>
 <li>I carry a reusable ziptie to attach a wheel to the frame as a parking brake - works great!</li>
 </ul>
 <h2 id="cost">Cost</h2>
@@ -97,6 +104,6 @@
 <p>We both do a 5km every morning and baby seems pretty happy  - result! It was really fun doing the design and build, to the point where I&#39;m tempted to do v2 for a friend. When the prices drop, I may attempt a 3D printed metal glued cargo bike frame à la <a href="https://www.athertonbikes.com/technology/build-srange.html">Atherton Bikes</a>.</p>
 <p>If you want any more tips on building your own or want to join me and become the Cervélo of the buggy world - drop us an email (see home page).</p>
 <p><em>Runner's eye view:</em></p>
-<p><img src="images/buggy/running.png" alt="Running"></p>
+<p><img src="images/buggy/running.webp" alt="Running"></p>
 </body>
 </html>
