--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@ TODO
         <ul>
             <li>I played some <a href="https://www.youtube.com/watch?v=bAYo9wrLYN8">double bass</a></li>
             <li><a href="consciousness.html">Summary</a> of the book "Consciousness and the Social Brain"</li>
-            <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
-            <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
+            <li>An <a href="https://open.spotify.com/album/2cjUrSr1yBOFgPDknhzrxK?si=cjyo_i23TOWR6fZcMVLd8A">EP</a></li>
+            <li>Some older <a href="https://soundcloud.com/leontrolski">music</a></li>
+            <li>Running <a href="buggy.html">buggy</a></li>
             <li>My <a href="thermostat.html">dream thermostat</a></li>
+            <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
             <li>Bayes <a href="bayes.html">derivation</a></li>
             <li>Games for <a href="games.html">babies</a></li>
-            <li>Running <a href="buggy.html">buggy</a></li>
             <li><a href="recipes.html">Recipes</a> for laid-back engineers</li>
         </ul>
     </p>
