--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ TODO
         <div><code><a href="#what-ifs">What ifs</a></code></div>
         <div><code><a href="#cycling">Cycling</a></code></div>
         <div><code><a href="#other">Other</a></code></div>
+        <div><code><a href="#me">For me</a></code></div>
         <div><code><a href="#gists">Github gists/stars</a></code></div>
         <div><code><a href="#projects">Github projects</a></code></div>
         <div><code><a href="#game">Blocks game</a></code></div>
@@ -160,8 +161,15 @@ TODO
             <li>My <a href="thermostat.html">dream thermostat</a></li>
             <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
             <li>Bayes <a href="bayes.html">derivation</a></li>
+        </ul>
+    </p>
+    <br>
+    <p id="me">
+        <b>Stuff for me</b>.
+        <ul>
             <li>Games for <a href="games.html">babies</a></li>
             <li><a href="recipes.html">Recipes</a> for laid-back engineers</li>
+            <li><a href="buses.html">Public transport</a> near me</li>
         </ul>
     </p>
     <br>
