--- a/buses.html
+++ b/buses.html
@@ -81,7 +81,7 @@
             stopName: "Pembury Road",
             stopIdWest: "490010900S",
             stopIdEast: "490010900N",
-            eastToWest: "<b>Lea Bridge<b> → 🏠 → Angel → <b>St. Pauls</b> (35mins)",
+            eastToWest: "<b>Lea Bridge</b> → 🏠 → Angel → <b>St. Pauls</b> (35mins)",
         },
         {
             number: "55",
