--- a/recipes.html
+++ b/recipes.html
@@ -50,7 +50,8 @@
         <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"></p><hr>
         <p id="06"><img class="recipe" src="images/recipes/06-cauli-ench.webp"></p><hr>
         <p id="07"><img class="recipe" src="images/recipes/07-pad-thai.webp"></p><hr>
-        <p id="08"><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
+        <p id="08">Double everything</p>
+        <p><img class="recipe" src="images/recipes/08-cannelloni.webp"></p><hr>
         <p id="09"><img class="recipe" src="images/recipes/09-dumpling-stew.webp"></p><hr>
         <p id="10"><img class="recipe" src="images/recipes/10-cashew-paneer.webp"></p><hr>
         <br>
