--- a/buggy.html
+++ b/buggy.html
@@ -66,6 +66,9 @@
 <h2 id="donor-pram">Donor pram</h2>
 <p>The 5 point harness and fabric baby actually sits in are taken from a £20 donor buggy from the 90s. This included a zip-on winter sleeping bag bit that has been very useful, along with a canopy (this fitted on surprisingly easily) that has had some use in the rain:</p>
 <p><img src="images/buggy/canopy.webp" alt="Canopy"></p>
+<h2 id="folding">Storage</h2>
+<p>I often buy bread half way round our run, so I added a small bag:</p>
+<p><img src="images/buggy/bag.webp" alt="Bag"></p>
 <h2 id="folding">Folding</h2>
 <p>Undoing two bolts allows the whole thing to fold flat:</p>
 <p><img src="images/buggy/folding.webp" alt="Folding"></p>
