Add better pydantic

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ TODO
             <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Python stdlib <a href="protocol.html">Protocol types</a></li>
             <li>Using <a href="typeis.html">TypeIs</a> in Python</li>
-            <li>Commonly used <a href="pydantic.html">Pydantic</a> features</li>
+            <li>How to use <a href="pydantic-wrong.html">Pydantic</a></li>
             <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
         </ul>
