--- a/pydantic.html
+++ b/pydantic.html
@@ -25,6 +25,9 @@
             ⇦
         </a>
         <p><i>2025-04-10</i></p>
+        <br>
+        <p><b>Superceeded by <a href="pydantic-wrong.html">this</a>.</b></p>
+        <br>
         <h1>
             (Un)commonly used <a href="pydantic.html">Pydantic</a> features
         </h1>
